--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,33 @@
-master:
-  image: redis:3
-slave:
-  image: redis:3
-  command: redis-server --slaveof redis-master 6379
-  links:
-    - master:redis-master
-sentinel:
-  build: sentinel
-  environment:
-    - SENTINEL_DOWN_AFTER=5000
-    - SENTINEL_FAILOVER=5000
-  links:
-    - master:redis-master
-    - slave
+version: "3"
+services:
+  master:
+    image: redis:3
+
+  slave:
+    image: redis:3
+    command: redis-server --slaveof redis-master 6379
+    links:
+      - master:redis-master
+    deploy:
+      mode: replicated
+      replicas: 3
+
+  sentinel:
+    build: sentinel
+    environment:
+      - SENTINEL_DOWN_AFTER=5000
+      - SENTINEL_FAILOVER=5000
+    links:
+      - master:redis-master
+      - slave
+    deploy:
+      mode: replicated
+      replicas: 3
+
+  haproxy:
+    image: haproxy:alpine
+    volumes:
+      - "./haproxy:/usr/local/etc/haproxy:ro"
+    ports:
+      - "6379:6379"
+      - "80:8080"
